k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spema-service
  namespace: spema
  labels:
    app.kubernetes.io/name: spema
    app.kubernetes.io/component: web-service
    app.kubernetes.io/part-of: spema-ledger
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: spema
    app.kubernetes.io/component: web-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
